...
                backgroundColor: const Color(0xFF7EDA64),
                shape: RoundedRectangleBorder(
                  borderRadius: BorderRadius.circular(15),
                ),
              ),
              child: const Text(
                'Ecological Tips and Facts',
                style: TextStyle(
                  color: Color(0xFF0B610B),
                  fontWeight: FontWeight.bold,
                  fontSize: 22,
                ),
              ),
...
                backgroundColor: const Color(0xFF0B610B),
                shape: RoundedRectangleBorder(
                  borderRadius: BorderRadius.circular(15),
                ),
              ),
              child: const Text(
                'News of our Planet',
                style: TextStyle(
                  color: Color(0xFFFFFFFF),
                  fontWeight: FontWeight.bold,
                  fontSize: 22,
                ),
              ),
...
