...
    Question(
      id: 'question_0',
      type: QuestionType.multiChoice,
      question: 'What means of transportation did you use today?',
      color: '0XFF1AA3DE',
      answers: [
        Answer('walked', 30, 5, icon: 'walking.png'),
        Answer('bicycle', 30, 5, icon: 'bicycle.png'),
        Answer('car', -10, 10, icon: 'car.png'),
        Answer('electric bicycle', 13, 10, icon: 'electric_bicycle.png'),
        Answer('electric car', -5, 10, icon: 'electric_car.png'),
        Answer('motorcycle', -15, 10, icon: 'motorcycle.png'),
        Answer('train', 11, 10, icon: 'train.png'),
...
      id: 'question_1',
      type: QuestionType.multiChoice,
      question: 'What did you eat today?',
      color: '0XFFA1CB8D',
      answers: [
        Answer('meat', 5, 10, icon: 'meat.png'),
        Answer('fish', 5, 10, icon: 'fish.png'),
        Answer('vegetables', 10, 10, icon: 'vegetables.png'),
        Answer('processed food', -10, 10, icon: 'pizza.png'),
        Answer('local products', 20, 10, icon: 'local_products.png'),
        Answer('imported products', -15, 10, icon: 'imported_products.png'),
        Answer('made at home', 25, 10, icon: 'home.png'),
      ],
...
