appId: pt.up.fe.es2024.g01t01
name: Sign in test (good credentials)
---
- launchApp:
    clearState: true
- tapOn: Email
- inputText: example@example.com
- tapOn: Password
- inputText: wrong
- tapOn: Sign in
- assertVisible: Invalid email or password
